fixing spacing of about skills

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -23,7 +23,7 @@
   }  
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px), only screen and (max-height: 720px) {
   .about-skill {
     margin-left: 28px;
     letter-spacing: 1.175px;
